--- a/scss/modules/emojis/_base.scss
+++ b/scss/modules/emojis/_base.scss
@@ -75,10 +75,6 @@
     }
   }
 
-  #monkey_scroll_wrapper_for_emoji_menu_items_scroller {
-    background: $color-base;
-  }
-
   #emoji_input:focus {
     border-color: $color-shade-light;
   }
