--- a/scss/modules/flexpane/_base.scss
+++ b/scss/modules/flexpane/_base.scss
@@ -1,10 +1,6 @@
 #flex_contents {
   background: $color-base;
 
-  .monkey_scroll_hider {
-    background: $color-base;
-  }
-
   .heading {
     background: $color-base;
     color: $base-link-color;
