--- a/scss/pages/_spaces.scss
+++ b/scss/pages/_spaces.scss
@@ -356,10 +356,6 @@ comments {
     background-color: $color-shade-dark;
     box-shadow: 0 0 0 1px $color-shadow-dark, 0 0 2px $color-shadow-dark;
   }
-
-  .monkey_scroll_wrapper {
-    background: $color-shade-dark;
-  }
 }
 
 #connection_status {
