--- a/scss/pages/_website.scss
+++ b/scss/pages/_website.scss
@@ -877,7 +877,6 @@ ul.sidebar_nav li {
 }
 
 .plan_availability,
-.menu #monkey_scroll_wrapper_for_menu_items_scroller,
 .modal-backdrop,
 .icon {
   background: $color-shade-dark;
